--- a/.github/workflows/github-pipeline-axe-ux-components.yml
+++ b/.github/workflows/github-pipeline-axe-ux-components.yml
@@ -9,6 +9,14 @@ on:
       - "feature/*"
     paths:
       - "ace-ux-components/*"
+  pull_request:
+    branches:
+      - main
+      - master
+      - develop
+      - "feature/*"
+    paths:
+      - "ace-ux-components/*"
 
 jobs:
   build-test:
