--- a/.github/workflows/github-pipeline-axe-ux-components.yml
+++ b/.github/workflows/github-pipeline-axe-ux-components.yml
@@ -15,6 +15,7 @@ on:
       - master
       - develop
       - "feature/*"
+    types: [opened, synchronize]
     paths:
       - "ace-ux-components/*"
 
