update pipelines w/ permissions
Signed-off-by: Kyle Mas <113933348+kcamas15@users.noreply.github.com>

--- a/.github/workflows/github-pipeline-ace-ux-components.yml
+++ b/.github/workflows/github-pipeline-ace-ux-components.yml
@@ -8,6 +8,10 @@ on:
     types: [opened, synchronize]
     paths:
       - "ace-ux-components/*"
+      
+permissions:
+  pull-requests: write
+  contents: write
 
 jobs:
   build-test:
