update yml pipeline
Signed-off-by: Kyle Mas <113933348+kcamas15@users.noreply.github.com>

--- a/.github/workflows/github-pipeline-ace-ux-components.yml
+++ b/.github/workflows/github-pipeline-ace-ux-components.yml
@@ -2,12 +2,10 @@ name: Build and Deploy SPFx Library
 
 on:
   pull_request:
-    branches:
-      - main
-      - "feature/*"
+    branches: '*'
     types: [opened, synchronize]
     paths:
-      - "ace-ux-components/*"
+      - '.github/workflows/**'
       
 permissions:
   pull-requests: write
