update pipeline path
Signed-off-by: Kyle Mas <113933348+kcamas15@users.noreply.github.com>

--- a/.github/workflows/github-pipeline-ace-ux-components.yml
+++ b/.github/workflows/github-pipeline-ace-ux-components.yml
@@ -28,7 +28,7 @@ jobs:
     if: >
       success() &&
       github.event_name == 'push' &&
-      github.ref == 'refs/heads/develop' &&
+      github.ref == 'refs/heads/main' &&
       github.head_commit.author.email != 'your-bot-email@example.com'
     runs-on: macos-latest
     steps:
