--- a/.github/workflows/github-pipeline-ace-ux-components.yml
+++ b/.github/workflows/github-pipeline-ace-ux-components.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   build-test:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -19,5 +19,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "16.x"
+      - name: Install dependencies
+        run: npm install
       - name: Build and Test
         run: npm run build
