--- a/.github/workflows/github-pipeline-ace-ux-components.yml
+++ b/.github/workflows/github-pipeline-ace-ux-components.yml
@@ -23,3 +23,24 @@ jobs:
         run: npm install
       - name: Build and Test
         run: npm run build
+  deploy-stable:
+    needs: build-test
+    if: >
+      success() &&
+      github.event_name == 'push' &&
+      github.ref == 'refs/heads/main' &&
+      github.head_commit.author.email != 'your-bot-email@example.com'
+    runs-on: macos-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Extract stable package
+        uses: dawidd6/action-extract@v2
+        with:
+          archive: ${{ github.workspace }}/StablePackage/*.tgz
+          dest: "."
+      - name: Publish NPM package
+        uses: mheap/github-action-npm-publish@v1
+        with:
+          access: public
+    
