--- a/.github/workflows/github-pipeline-ace-ux-components.yml
+++ b/.github/workflows/github-pipeline-ace-ux-components.yml
@@ -2,15 +2,17 @@ name: Build and Deploy SPFx Library
 
 on:
   pull_request:
-    branches: '*'
-      
+    branches:
+      - main
+  workflow_dispatch: # Add this event to enable manual triggering
+
 permissions:
   pull-requests: write
   contents: write
 
 jobs:
   build-test:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -18,5 +20,27 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "16.x"
+      - name: Install dependencies
+        run: npm install
       - name: Build and Test
         run: npm run build
+  deploy-stable:
+    needs: build-test
+    if: >
+      success() &&
+      github.event_name == 'push' &&
+      github.ref == 'refs/heads/main' &&
+      github.head_commit.author.email != 'your-bot-email@example.com'
+    runs-on: macos-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Extract stable package
+        uses: dawidd6/action-extract@v2
+        with:
+          archive: ${{ github.workspace }}/StablePackage/*.tgz
+          dest: "."
+      - name: Publish NPM package
+        uses: mheap/github-action-npm-publish@v1
+        with:
+          access: public
