--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "audit-fix": "npm audit fix --registry=https://registry.npmjs.org/",
     "clean": "rimraf lib/",
-    "copy-files": "copyfiles -u 1 src/libraries/components/assets/*.png src/libraries/components/assets/*.gif src/libraries/components/assets/*.svg lib/",
+    "copy-files": "copyfiles -u 1 src/assets/*.png src/assets/*.gif src/assets/*.svg lib/",
     "build": "npm run clean && tsc -p tsconfig.json && npm run copy-files",
     "compile-lint-rules": "cd customLintRules/ && tsc unnecessaryElseRule.ts && cd ../",
     "lint": "tslint --project . --format stylish",
