Removed jest from gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -349,5 +349,19 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
-# lib
-lib/
+# Build generated files
+dist
+lib
+release
+solution
+temp
+*.sppkg
+.heft
+
+# Coverage directory used by tools like istanbul
+coverage
+
+# Test generated files
+jest
+junit.xml
+test-results.xml
