--- a/.github/workflows/github-pipeline-ace-ux-components.yml
+++ b/.github/workflows/github-pipeline-ace-ux-components.yml
@@ -20,12 +20,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "16.x"
-      - name: Open ux-components folder
-        run: cd ux-components
       - name: Install dependencies
-        run: npm install
+        run: cd ux-components && npm install
       - name: Build and Test
-        run: npm run build
+        run: cd ux-components && npm run build
   deploy-stable:
     needs: build-test
     if: >
