--- a/.github/workflows/github-pipeline-ace-ux-components.yml
+++ b/.github/workflows/github-pipeline-ace-ux-components.yml
@@ -20,10 +20,14 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "16.x"
-      - name: Install dependencies
+      - name: Install dependencies for ux-components
         run: cd ux-components && npm install
-      - name: Build and Test
+      - name: Build and Test for ux-components
         run: cd ux-components && npm run build
+      - name: Install dependencies for dashboard cards
+        run: cd dashboard && npm install
+      - name: Build and Test for dashboard cards
+        run: cd dashboard && npm run build
   deploy-stable:
     needs: build-test
     if: >
