--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -15,13 +15,13 @@
     "build": "gulp bundle",
     "clean": "gulp clean",
     "nuke": "npm cache clean --force && cd ../ux-components && rimraf node_modules && rimraf lib && rimraf package-lock.json && cd ../dashboard && rimraf lib && rimraf dist && rimraf node_modules && rimraf package-lock.json",
-    "nuke-n-serve": "npm run nuke && npm run init-viva && npm run serve",
+    "nuke-n-serve": "npm run nuke && npm run init-ace && npm run serve",
     "compile-lint-rules": "cd customLintRules/ && tsc unnecessaryElseRule.ts && cd ../",
     "compile-resx-transform": "cd resx/ && tsc parseLocFileAsObject.ts resx-as-export.ts && cd ../",
     "generate-card": "yo @microsoft/sharepoint",
-    "init-viva": "cd ../ux-components && npm i && npm run build && cd ../dashboard && npm i && npm run build",
-    "link-viva-ux": "cd ../ux-components && npm link && cd ../dashboard && npm link ace-ux-components",
-    "pull-viva-ux": "cd ../ux-components && npm run build && npm link && cd ../dashboard && npm link ace-ux-components && npm run build",
+    "init-ace": "cd ../ux-components && npm i && npm run build && cd ../dashboard && npm i && npm run build",
+    "link-ace-ux": "cd ../ux-components && npm link && cd ../dashboard && npm link ace-ux-components",
+    "pull-ace-ux": "cd ../ux-components && npm run build && npm link && cd ../dashboard && npm link ace-ux-components && npm run build",
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint . --ext .ts --fix",
     "serve": "gulp serve -l --nobrowser",
@@ -33,7 +33,7 @@
     "upgrade-lib-full": "cd ../ux-components && rm -rf lib && rm -rf node_modules && npm i && npm run build && cd ../dashboard && npm update ux-components",
     "upgrade-lib-full-windows": "cd ../ux-components && del lib /Q && del node_modules /Q && npm i && npm run build && cd ../dashboard && npm update ux-components",
     "preinstall": "npx force-resolutions",
-    "postinstall": "npm run patch-adaptivecards && npm run link-viva-ux",
+    "postinstall": "npm run patch-adaptivecards && npm run link-ace-ux",
     "analyze-bundle": "gulp serve -l --analyze --nobrowser"
   },
   "dependencies": {
