--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ace-ux-components",
-  "version": "0.0.1-beta",
+  "version": "1.0.0",
   "description": "Re-usable Viva UX components library based on Microsoft's VIVA adaptive cards extension",
   "private": false,
   "repository": {
