--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ace-ux-components",
   "version": "1.0.0",
-  "description": "Re-usable Viva UX components library based on Microsoft's VIVA adaptive cards extension",
+  "description": "Re-usable UX components library based on Microsoft's Sharepoint adaptive cards extension (ACE)",
   "private": false,
   "repository": {
     "type": "git",
