--- a/ux-components/package.json
+++ b/ux-components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ace-ux-components",
+  "name": "@microsoft/ace-ux-components",
   "version": "1.1.1",
   "description": "Re-usable UX components library based on Microsoft's Sharepoint adaptive cards extension (ACE)",
   "private": false,
