Add beachball sync & update naming for build pipeline (#20)
* run beachball sync for versioning

* update naming for build pipeline

* Change files

* sync up emails on beachball files

* update readme file w/ setup instructions

* update styling in readme file

* Updated package name to add microsoft scope.

* Change files

---------

Co-authored-by: Shiva Gollapelly <sgollapelly@microsoft.com>

--- a/ux-components/package.json
+++ b/ux-components/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ace-ux-components",
-  "version": "1.0.0",
+  "name": "@microsoft/ace-ux-components",
+  "version": "1.1.1",
   "description": "Re-usable UX components library based on Microsoft's Sharepoint adaptive cards extension (ACE)",
   "private": false,
   "repository": {
@@ -23,6 +23,7 @@
     "patch-types-jest-diff": "node patches/@types/jest-diff/patch.js",
     "patch-types-pretty-format": "node patches/@types/pretty-format/patch.js",
     "release": "beachball publish",
+    "sync": "beachball sync",
     "test": "jest",
     "preinstall": "npx force-resolutions",
     "postinstall": "npm run patch-node-modules"
