--- a/ux-components/package.json
+++ b/ux-components/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "https://github.com/microsoft/ace-ux-components"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "lib/index.js",
   "scripts": {
     "audit-fix": "npm audit fix --registry=https://registry.npmjs.org/",
