--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -37,11 +37,11 @@
     "analyze-bundle": "gulp serve -l --analyze --nobrowser"
   },
   "dependencies": {
+    "@microsoft/ace-ux-components": "^1.4.0",
     "@microsoft/sp-adaptive-card-extension-base": "1.17.0",
     "@microsoft/sp-core-library": "1.17.0",
     "@microsoft/sp-property-pane": "1.17.0",
-    "dayjs": "^1.11.0",
-    "ace-ux-components": "file:..//ux-components"
+    "dayjs": "^1.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
