--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -36,9 +36,9 @@
     "analyze-bundle": "gulp serve -l --analyze --nobrowser"
   },
   "dependencies": {
-    "@microsoft/sp-adaptive-card-extension-base": "1.18.1-rc.0",
-    "@microsoft/sp-core-library": "1.18.1-rc.0",
-    "@microsoft/sp-property-pane": "1.18.1-rc.0",
+    "@microsoft/sp-adaptive-card-extension-base": "^1.18.1-rc.0",
+    "@microsoft/sp-core-library": "^1.18.1-rc.0",
+    "@microsoft/sp-property-pane": "^1.18.1-rc.0",
     "dayjs": "^1.11.0",
     "ace-ux-components": "file:..//ux-components"
   },
@@ -46,11 +46,11 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-typescript": "^7.14.5",
-    "@microsoft/generator-sharepoint": "1.18.1-rc.0",
+    "@microsoft/generator-sharepoint": "^1.18.1-rc.0",
     "@microsoft/rush-stack-compiler-4.5": "0.4.0",
-    "@microsoft/sp-build-web": "1.18.1-rc.0",
-    "@microsoft/sp-module-interfaces": "1.18.1-rc.0",
-    "@microsoft/sp-tslint-rules": "1.18.1-rc.0",
+    "@microsoft/sp-build-web": "^1.18.1-rc.0",
+    "@microsoft/sp-module-interfaces": "^1.18.1-rc.0",
+    "@microsoft/sp-tslint-rules": "^1.18.1-rc.0",
     "@types/es6-promise": "^3.3.0",
     "@types/node": "^17.0.21",
     "@types/webpack-env": "1.13.1",
